--- a/src/app/pages/feed/feed.page.html
+++ b/src/app/pages/feed/feed.page.html
@@ -6,6 +6,10 @@
 
 <ion-content>
 <ion-item>
-  <h2>Bienvenido {{ displayUserData?.userName }}</h2>
+  <h5>Bienvenido {{ displayUserData?.userName }}</h5>
 </ion-item>
+<ion-item>  
+    <p>Servicos disponibles: </p>
+</ion-item>
+<app-feed-card></app-feed-card>
 </ion-content>
