--- a/src/app/components/slides/slides.component.html
+++ b/src/app/components/slides/slides.component.html
@@ -2,12 +2,12 @@
   <ion-slide>
     <app-logo></app-logo>
     <h2>Bienvenido a PetsFriends</h2>
-    <p>Contruyendo sitio.</p>
+    <img src="assets/images/conecta1.JPG" alt="Logo PetsFriends">
   </ion-slide>
   <ion-slide>
-    <h2>Slide 2</h2>
+    <img src="assets/images/conecta2.JPG" alt="Logo PetsFriends">
   </ion-slide>
   <ion-slide>
-    <h2>Slide 3</h2>
+    <img src="assets/images/conecta3.JPG" alt="Logo PetsFriends">
   </ion-slide>
 </ion-slides>
