--- a/src/app/components/start/start.component.html
+++ b/src/app/components/start/start.component.html
@@ -1,1 +1,1 @@
-<ion-button expand="block" color='warning' (click)="navigateToLoginPage()">Start</ion-button>
+<ion-button expand="block" color='warning' (click)="navigateToLoginPage()">INICIA</ion-button>
