Correccion en welcome

--- a/src/app/components/slides/slides.component.html
+++ b/src/app/components/slides/slides.component.html
@@ -4,10 +4,10 @@
     <h2>Bienvenido a PetsFriends</h2>
     <img src="assets/images/conecta1.JPG" alt="Logo PetsFriends">
   </ion-slide>
-  <ion-slide>
+  <!--<ion-slide>
     <img src="assets/images/conecta2.JPG" alt="Logo PetsFriends">
   </ion-slide>
   <ion-slide>
     <img src="assets/images/conecta3.JPG" alt="Logo PetsFriends">
-  </ion-slide>
+  </ion-slide>-->
 </ion-slides>
