--- a/src/app/components/slides/slides.component.html
+++ b/src/app/components/slides/slides.component.html
@@ -1,7 +1,7 @@
 <ion-slides pager="true" [options]="slideOpts">
   <ion-slide>
     <app-logo></app-logo>
-    <h2>Bienvenido a PetsFriends</h2>
+    <h4>Conecta con amantes de los animales.</h4>
     <img src="assets/images/conecta1.JPG" alt="Logo PetsFriends">
   </ion-slide>
   <!--<ion-slide>
