--- a/src/app/components/slides/slides.component.scss
+++ b/src/app/components/slides/slides.component.scss
@@ -1,8 +1,9 @@
 ion-slide{
-    padding: 0px 0px;
+    padding: 5px 5px;
     display: block;
-    h2{
-        font-size: 36px;
+    h4{
+        font-size: 20px;
         font-weight: bold;
+        color: #ffc107;
     }
 }
