--- a/src/app/components/start/start.component.html
+++ b/src/app/components/start/start.component.html
@@ -1,1 +1,2 @@
-<ion-button expand="block" color='warning' (click)="navigateToLoginPage()">INICIA</ion-button>
+<ion-button expand="block" color='warning' (click)="navigateToLoginPage()">INICIA SESIÓN</ion-button>
+<br>
